﻿25.8.28.6
=========
 + Add word-wrap to achievement tracker descriptions.
 + Add achievement list to the control panel itself, without having to open
     the tracker widget.

25.8.28.5
=========
 + Flash the Achievement Tracker widget visible for 2.5 seconds whenever a
     tracked achievement makes progress and the widget is not visible.
 + Revert pull request #291 from AnubyteCode:denuvo because it is causing
     crashes in emulated games.

25.8.28.4
=========
 + Add config setting to show/hide achievement rarity in the achievement
     widget while it is in tracker-only (control panel closed) mode.

25.9.28.3
=========
 + Added configurable search URL (i.e. duckduckgo.com/?q=!trueachievements)
     to open the Steam overlay (or web browser if not applicable) to a guide
       page by clicking any achievements listed in the tracker.

    * TrueAchievements is for Xbox, but tends to have more detailed info...
        !truesteam is also an option, do not expect any useful info though :)

25.9.28.2
=========
 + Fixed rare situation where global achievement unlock %s change while
     displaying an achievement popup and the rare gold border does not
       go away when the achievement popup does.

25.9.28.1
=========
 + Store Achievement Tracker's "Show Hidden" setting globally.
 + Removed unimplemented settings from Achievement Tracker Widget config.
 + Fix minor tokenize/serialize issues when configuring tracked achievements.

25.9.28
=======
 + Merge pull request #288 from mcha-forks:mochaa/watch-dogs
    * Watch_Dogs: New PlugIn (Input / VMProtect-related stuff)
 + Merge pull request #291 from AnubyteCode:denuvo
    * Improved Steam Denuvo activation file management
 + Merge pull request #294 from Nustat0:oglvk-interop-api
    * Identify the API for Vulkan / OpenGL -> DXGI interop
 + Merge pull request #179 from Kethen:d9vk_double_process_fix
    * d9vk double processing fix
 + Merge pull request #152 from Nustat0:latent-sync-adaptive-tearing